# nfl_lms

./: .editorconfig  .env.example  .gitignore  README.md  espn_nfl.py  firebase_store.py  firestore_store.py  game.py  game_rules.md  league.py  pick.py  pick_validation.py  pyproject.toml  render.yaml  scoring.py  settings.py  team.py  todo.md  user.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
nfl_lms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: database_fake.py  test_api.py  test_crud_operations.py  test_database_models.py  test_espn_nfl.py  test_firebase_integration.py  test_firebase_store.py  test_firestore_integration.py  test_firestore_models.py  test_firestore_store.py  test_game.py  test_league.py  test_model_validation.py  test_pick.py  test_pick_validation.py  test_scoring.py  test_settings.py  test_team.py  test_user.py
test/e2e/: __init__.py  conftest.py  test_api_flow.py  test_league_create.py  test_user_signup.py
web/: README.md  index.html  package.json
web/src/: firebase.ts
