[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-lms"
version = "0.1.0"
description = "NFL Last Man Standing Game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "firebase-admin>=6.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[tool.setuptools]
py-modules = ["user", "league", "settings", "team", "espn_nfl", "firebase_store"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "test"]
addopts = "-ra"
markers = [
    "e2e: full-app API scenarios (end-to-end via TestClient, see test/e2e/)",
    "firebase: live Realtime Database (requires FIREBASE_TEST=1 and credentials or emulator; see test_firebase_integration.py)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "test", "."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
